# Playwise

./: CMakeLists.txt  GUI_SETUP_GUIDE.md  GUI_SUMMARY.md  HINDI_SONGS_LIST.md  Makefile  Makefile_GUI  PROJECT_SUMMARY.md  README.md  TECHNICAL_DESIGN.md  build_gui.bat  console_gui.cpp  gui_main.cpp  main.cpp  playback_history.cpp  playback_history.h  playlist_engine.cpp  playlist_engine.h  playlist_sorter.cpp  playlist_sorter.h  simple_gui.cpp  song.cpp  song.h  song_lookup.cpp  song_lookup.h  song_rating_tree.cpp  song_rating_tree.h  system_snapshot.cpp  system_snapshot.h  test_demo.txt
